# rust_server_1

./: Readme.md
eztutors/: Cargo.toml
eztutors/tutor-db/: Cargo.toml
eztutors/tutor-db/src/: database.sql
eztutors/tutor-db/src/iter2/: handlers.rs  models.rs
eztutors/tutor-db/src/iter3/: db_access.rs
eztutors/tutor-db/src/iter4/: errors.rs  handlers.rs  routes.rs
eztutors/tutor-db/src/iter5/: routes.rs
eztutors/tutor-db/src/iter5/dbaccess/: course.rs  tutor.rs
eztutors/tutor-nodb/: Cargo.toml
eztutors/tutor-nodb/src/: handlers.rs  routes.rs
eztutors/tutor-web-app-ssr/: .env  Cargo.toml
eztutors/tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handler.rs  mod.rs  model.rs  route.rs
eztutors/tutor-web-app-ssr/static/: static-web-page.html  style.css
eztutors/tutor-web-app-ssr/static/iter1/: index.html
eztutors/tutor-web-app-ssr/static/iter2/: form.html  user.html
eztutors/tutor-web-app-ssr/static/iter3/: list.html
eztutors/tutor-web-app-ssr/static/iter4/: list.html
eztutors/tutor-web-service/: .env
eztutors/tutor-web-service/src/: database_c5.sql
eztutors/tutor-web-service/src/iter2/: handlers.rs
eztutors/tutor-web-service/src/iter3/: handlers.rs
eztutors/tutor-web-service/src/iter4/: db_access.rs
scenario1/http/src/: HttpResponse.rs  httprequest.rs  lib.rs
scenario1/httpserver/data/: orders.json
scenario1/httpserver/public/: 404.html  health.html  index.html
scenario1/httpserver/src/: handler.rs  router.rs  server.rs
scenario1/tcpclient/src/: main.rs
scenario1/tcpserver/src/: main.rs
(+9 files in other folders)
